# jktech-backend

./: .dockerignore  .env.example  .gitignore  Book Management API.postman_collection.json  CHROMADB_FIX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_FIX.md  Dockerfile  LICENSE  LOGGING.md  LOGGING_IMPLEMENTATION.md  README.md  alembic.ini  artisan  artisan.py  docker-compose.yml  local-setup.md  main.py  pyproject.toml  setup.sh  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: add_books_and_documents.py  initial_migration.py
app/: __init__.py
app/api/v1/: api.py
app/console/: __init__.py  kernel.py
app/console/commands/: __init__.py  cache.py  database.py  install.py  key_generate.py  logs.py  make.py  migration.py  schedule.py  seeder.py  serve.py  test.py  user.py
app/console/templates/: controller.py  model.py  seeder.py  service.py
app/core/: broadcasting.py  cache.py  celery_app.py  channels.py  database.py  database_async.py  error_handler.py  file_security.py  gates.py  http.py  logging.py  logging_decorator.py  policies.py  scheduler.py  security.py  security_async.py  storage.py
app/events/: __init__.py  base.py  user_events.py
app/examples/: http_examples.py
app/http/middleware/: __init__.py  logging.py  rate_limit.py
app/jobs/: tasks.py
app/models/: book.py  document.py  user.py
app/schemas/: book.py  document.py  token.py  user.py
app/services/: openrouter.py  rag.py  recommendation.py
app/tests/: conftest.py  test_books.py  test_documents.py
charts/fastapi-boilerplate/: Chart.yaml  values.yaml
charts/fastapi-boilerplate/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
chroma_db/: chroma.sqlite3.backup
config/: __init__.py  app.py  broadcasting.py  cache.py  celery.py  cors.py  database.py  filesystems.py  jwt.py  logging.py  mail.py  rate_limit.py  scheduler.py
docker/prometheus/: prometheus.yml
public/: .gitkeep  README.md
public/storage/: .gitkeep
routes/: __init__.py  api.py  channels.py  web.py
scripts/: create_database.py
(+8 files in other folders)
